--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ JWT_SECRET="jwt-secret"
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dwiufibyo"
 NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="ml_default"
+
+NEXT_PUBLIC_KAKAO_MAP_API_KEY="1545de4e5f1a1d0543d90d433d2a0695"
